# ferrumctl

./: .gitignore  AGENTS.md  NOTES.md  README.md  pyproject.toml
.agents/plugins/: marketplace.json
docs/: coordination-principles.md  coordination-recipes.md  operational-caveats.md
docs/workflows/: orchestrator-worker-loop.md
plugins/codex-goalctl/.codex-plugin/: plugin.json
plugins/codex-goalctl/skills/codex-goalctl/: SKILL.md
plugins/codex-goalctl/skills/codex-goalctl/agents/: openai.yaml
plugins/codex-wakectl/.codex-plugin/: plugin.json
plugins/codex-wakectl/skills/codex-wakectl/: SKILL.md
scripts/: check.sh  codex-smoke.sh  skill-references.json  sync-skill-references.py
src/: main.rs
src/codex_goalctl/: __init__.py  cli.py
src/codex_wakectl/: cli.py
tests/: test_cli.py
